WebCore/accessibility/AccessibilityObject.cpp
@@ -62,6 +62,7 @@ using namespace HTMLNames;
 AccessibilityObject::AccessibilityObject()
     : m_id(0)
     , m_haveChildren(false)
+    , m_role(UnknownRole)
 #if PLATFORM(GTK)
     , m_wrapper(0)
 #endif
